# DL-MD

./: .gitignore  README.md  eval_1b2s_F.json  eval_1b2s_F_clipped.json  eval_1b2s_F_ddpm.json  eval_1b2s_F_ddpm200.json  eval_1b2s_F_stable.json  eval_1b2s_F_wca.json  eval_1z0b_A.json  eval_2y4x_B.json  eval_3u7t_A.json  eval_4p3a_B.json  eval_6ovk_R.json  pyproject.toml  validation_baseline.json  validation_modeA.json  validation_modeB.json  validation_v3_lam0.json  validation_v3_lam01_10k.json  validation_v3_lam03.json  validation_v3_phase3.json  validation_v4_1b2s_F_T300.json  validation_v4_1b2s_F_T375.json  validation_v4_1b2s_F_T450.json  validation_v4_1z0b_A_T300.json  validation_v4_1z0b_A_T375.json  validation_v4_1z0b_A_T450.json  validation_v4_2y4x_B_T300.json  validation_v4_2y4x_B_T375.json  validation_v4_2y4x_B_T450.json  validation_v4_3u7t_A_T300.json  validation_v4_3u7t_A_T375.json  validation_v4_3u7t_A_T450.json  validation_v4_4p3a_B_T300.json  validation_v4_4p3a_B_T375.json  validation_v4_4p3a_B_T450.json  validation_v4_6ovk_R_T300.json  validation_v4_6ovk_R_T375.json  validation_v4_6ovk_R_T450.json  validation_v4_longlags_T300.json
checkpoints/: wt_2bead_200ep.pt  wt_4bead_200ep.pt
demo_2bead/: metrics.json  timing_report.txt
demo_4bead/: metrics.json  timing_report.txt
docs/: NSF_Progress_Report_2026.docx  NSF_Progress_Report_2026.md  next_steps.md  report.md  results_report.md  tutorial.md  validation_analysis.md
lsmd/: __init__.py  active_loop.py  atlas.py  batching.py  cg_energy.py  cv_guidance.py  data.py  decoder.py  demo.py  featurize.py  (+19 more)
(+101 files in other folders)
