[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsmd"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["torch", "mdtraj", "numpy"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["lsmd*"]
